--- a/notebooks/EDA.ipynb
+++ b/notebooks/EDA.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -23,6 +23,7 @@
     }
    ],
    "source": [
+    "# Load raw census data \n",
     "df = pd.read_csv('../data/census.csv')\n",
     "\n",
     "df.head(5)\n",
@@ -31,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -162,7 +163,7 @@
        "max      4356.000000        99.000000  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -173,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -197,48 +198,225 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df.isnull().sum()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "age                 int64\n",
-       " workclass         object\n",
-       " fnlgt              int64\n",
-       " education         object\n",
-       " education-num      int64\n",
-       " marital-status    object\n",
-       " occupation        object\n",
-       " relationship      object\n",
-       " race              object\n",
-       " sex               object\n",
-       " capital-gain       int64\n",
-       " capital-loss       int64\n",
-       " hours-per-week     int64\n",
-       " native-country    object\n",
-       " salary            object\n",
-       "dtype: object"
-      ]
-     },
      "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.dtypes"
+    "# missing value check\n",
+    "df.isnull().sum()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Column:  workclass\n",
+      " workclass\n",
+      " Private             22696\n",
+      " Self-emp-not-inc     2541\n",
+      " Local-gov            2093\n",
+      " ?                    1836\n",
+      " State-gov            1298\n",
+      " Self-emp-inc         1116\n",
+      " Federal-gov           960\n",
+      " Without-pay            14\n",
+      " Never-worked            7\n",
+      "Name: count, dtype: int64\n",
+      "\n",
+      "Column:  education\n",
+      " education\n",
+      " HS-grad         10501\n",
+      " Some-college     7291\n",
+      " Bachelors        5355\n",
+      " Masters          1723\n",
+      " Assoc-voc        1382\n",
+      " 11th             1175\n",
+      " Assoc-acdm       1067\n",
+      " 10th              933\n",
+      " 7th-8th           646\n",
+      " Prof-school       576\n",
+      " 9th               514\n",
+      " 12th              433\n",
+      " Doctorate         413\n",
+      " 5th-6th           333\n",
+      " 1st-4th           168\n",
+      " Preschool          51\n",
+      "Name: count, dtype: int64\n",
+      "\n",
+      "Column:  marital-status\n",
+      " marital-status\n",
+      " Married-civ-spouse       14976\n",
+      " Never-married            10683\n",
+      " Divorced                  4443\n",
+      " Separated                 1025\n",
+      " Widowed                    993\n",
+      " Married-spouse-absent      418\n",
+      " Married-AF-spouse           23\n",
+      "Name: count, dtype: int64\n",
+      "\n",
+      "Column:  occupation\n",
+      " occupation\n",
+      " Prof-specialty       4140\n",
+      " Craft-repair         4099\n",
+      " Exec-managerial      4066\n",
+      " Adm-clerical         3770\n",
+      " Sales                3650\n",
+      " Other-service        3295\n",
+      " Machine-op-inspct    2002\n",
+      " ?                    1843\n",
+      " Transport-moving     1597\n",
+      " Handlers-cleaners    1370\n",
+      " Farming-fishing       994\n",
+      " Tech-support          928\n",
+      " Protective-serv       649\n",
+      " Priv-house-serv       149\n",
+      " Armed-Forces            9\n",
+      "Name: count, dtype: int64\n",
+      "\n",
+      "Column:  relationship\n",
+      " relationship\n",
+      " Husband           13193\n",
+      " Not-in-family      8305\n",
+      " Own-child          5068\n",
+      " Unmarried          3446\n",
+      " Wife               1568\n",
+      " Other-relative      981\n",
+      "Name: count, dtype: int64\n",
+      "\n",
+      "Column:  race\n",
+      " race\n",
+      " White                 27816\n",
+      " Black                  3124\n",
+      " Asian-Pac-Islander     1039\n",
+      " Amer-Indian-Eskimo      311\n",
+      " Other                   271\n",
+      "Name: count, dtype: int64\n",
+      "\n",
+      "Column:  sex\n",
+      " sex\n",
+      " Male      21790\n",
+      " Female    10771\n",
+      "Name: count, dtype: int64\n",
+      "\n",
+      "Column:  native-country\n",
+      " native-country\n",
+      " United-States                 29170\n",
+      " Mexico                          643\n",
+      " ?                               583\n",
+      " Philippines                     198\n",
+      " Germany                         137\n",
+      " Canada                          121\n",
+      " Puerto-Rico                     114\n",
+      " El-Salvador                     106\n",
+      " India                           100\n",
+      " Cuba                             95\n",
+      " England                          90\n",
+      " Jamaica                          81\n",
+      " South                            80\n",
+      " China                            75\n",
+      " Italy                            73\n",
+      " Dominican-Republic               70\n",
+      " Vietnam                          67\n",
+      " Guatemala                        64\n",
+      " Japan                            62\n",
+      " Poland                           60\n",
+      " Columbia                         59\n",
+      " Taiwan                           51\n",
+      " Haiti                            44\n",
+      " Iran                             43\n",
+      " Portugal                         37\n",
+      " Nicaragua                        34\n",
+      " Peru                             31\n",
+      " France                           29\n",
+      " Greece                           29\n",
+      " Ecuador                          28\n",
+      " Ireland                          24\n",
+      " Hong                             20\n",
+      " Cambodia                         19\n",
+      " Trinadad&Tobago                  19\n",
+      " Laos                             18\n",
+      " Thailand                         18\n",
+      " Yugoslavia                       16\n",
+      " Outlying-US(Guam-USVI-etc)       14\n",
+      " Honduras                         13\n",
+      " Hungary                          13\n",
+      " Scotland                         12\n",
+      " Holand-Netherlands                1\n",
+      "Name: count, dtype: int64\n",
+      "\n",
+      "Column:  salary\n",
+      " salary\n",
+      " <=50K    24720\n",
+      " >50K      7841\n",
+      "Name: count, dtype: int64\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# See more info on filling of values of the object columns\n",
+    "# Iterate over each object column in the DataFrame\n",
+    "for column in df.select_dtypes(include='object'):\n",
+    "    # Print column name and its unique values\n",
+    "    print(\"Column:\", column)\n",
+    "    print(df[column].value_counts())\n",
+    "    print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Strip leading/trailing whitespaces from object column names and values\n",
+    "def clean_dataframe(df: pd.DataFrame) -> pd.DataFrame:\n",
+    "    \"\"\"\n",
+    "    Cleans a pandas dataframe by removing leading/trailing whitespaces from object columns and their values.\n",
+    "\n",
+    "    Args:\n",
+    "        df (pd.DataFrame): The dataframe to be cleaned.\n",
+    "\n",
+    "    Returns:\n",
+    "        pd.DataFrame: The cleaned dataframe.\n",
+    "    \"\"\"\n",
+    "       \n",
+    "    # Remove leading/trailing whitespaces from column names\n",
+    "    df.columns = [c.strip() for c in df.columns]\n",
+    "        \n",
+    "    # Remove leading/trailing whitespaces from column values\n",
+    "    for column in df.select_dtypes(include='object').columns:\n",
+    "        df[column] = df[column].str.strip()\n",
+    "\n",
+    "    return df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# clean the dataset\n",
+    "df_clean = clean_dataframe(df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "filename = '../data/census_clean.csv'\n",
+    "\n",
+    "df_clean.to_csv(filename, index=False)"
    ]
   }
  ],
